--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,7 +1,10 @@
 Revision history for Syntax::Highlight::Perl6.
 
 0.023 Dec 13 2008
-
+    - Added 23 tests
+    - POD fixes, diagrams, ..etc
+    - Removed a unicode wide-char
+    - parse_trees() method now returns the correct array of records
  
 0.022 Dec 12 2008
     - Fixed Makefile.PL so that META.yml is generated automatically
