util/PaP6-testing - README fix
git-svn-id: http://svn.pugscode.org/pugs@24333 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/util/PaP6-testing/README
+++ b/util/PaP6-testing/README
@@ -1,3 +1,1 @@
-Renamed to TapTinder and moved. 
-* http://mj41.cz/wiki/TapTinder
-* http://pr.perl6.cz/svn/taptinder/trunk/
+Renamed to TapTinder and moved to http://taptinder.org .
