[Syntax::Highlight::Perl6] Added vim_html() for Text::VimColor & perl6.vim [Syntax::Highlight::Perl6] Bumped version to 0.025 [Syntax::Highlight::Perl6] Added tests for vim_html and remove version from README
git-svn-id: http://svn.pugscode.org/pugs@24335 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.024 Dec 13 2008
+    - Added vimcolor_html method that uses Text::VimColor and perl6.vim
+
 0.023 Dec 13 2008
     - Added 23 tests
     - POD fixes, diagrams, ..etc
