--- a/misc/Syntax-Highlight-Perl6/README
+++ b/misc/Syntax-Highlight-Perl6/README
@@ -1,5 +1,5 @@
-Syntax-Highlight-Perl6 version 0.023
-====================================
+Syntax-Highlight-Perl6
+======================
 
 Highlights Perl 6 code. For more information, please refer to 
 Syntax::Highlight::Perl6.
