[Syntax::Highlight::Perl6] Updated Changes... Releasing 0.024 soon.
git-svn-id: http://svn.pugscode.org/pugs@24340 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,7 +1,9 @@
 Revision history for Syntax::Highlight::Perl6.
 
 0.024 Dec 13 2008
-    - Added vimcolor_html method that uses Text::VimColor and perl6.vim
+    - Added vim_html method that uses Text::VimColor and perl6.vim
+        to generate VIM CSS-inlined complete htmls
+    - Added tests for vim_html and removed version from README
 
 0.023 Dec 13 2008
     - Added 23 tests
