[Syntax::Highlight::Perl6] Bumped version to 0.026 + POD updates.... Releasing to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24396 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.026 Dec 16 2008
+    - More documention updates. No changes to functionality.
+
 0.025 Dec 14 2008
     - Updated perl6.vim to r24360
     - Added missing t/01-vim.t 
