--- a/misc/Syntax-Highlight-Perl6/README
+++ b/misc/Syntax-Highlight-Perl6/README
@@ -2,7 +2,7 @@ Syntax-Highlight-Perl6
 ======================
 
 Highlights Perl 6 code. For more information, please refer to 
-Syntax::Highlight::Perl6.
+perldoc Syntax::Highlight::Perl6.
 
 INSTALLATION
 
