[Syntax::Highlight::Perl6] Passed most important perlcritic --harsh (-1) [Syntax::Highlight::Perl6] for bin/syntax-highlight-p6 [Syntax::Highlight::Perl6] updated Changes... Releasing 0.027 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24406 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,10 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.027 Dec 16 2008
+    - Added bin/syntax-highlight-p6
+    - Updated to latest perl6.vim
+    - Passed most important perlcritic --harsh (-1)
+
 0.026 Dec 16 2008
     - More documention updates. No changes to functionality.
 
