[Syntax::Highlight::Perl6] Updating Changes and releasing 0.028 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24435 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,10 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.028 Dec 17 2008
+    - syntax-highlight-p6 is now hilitep6
+    - added version prequisites for dependencies
+    - POD fixes (e.g. =item -> =head2 in methods section)
+
 0.027 Dec 16 2008
     - Added bin/syntax-highlight-p6
     - Updated to latest perl6.vim
