[Syntax::Highlight::Perl6] Updated changes... Releasing 0.029 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24450 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,9 +1,10 @@
 Revision history for Syntax::Highlight::Perl6.
 
 0.029 Dec 17 2008
-    - Fix the lexical scope sharing bug that caused the parser 
+    - Fix the my-variable sharing bug that caused the parser 
       to work once for all instances.
-    - Moose 0.57 -> 0.63 dependency
+    - Added two tests to check for that bug.
+    - Moose 0.57 -> 0.63 dependency.
 
 0.028 Dec 17 2008
     - syntax-highlight-p6 is now hilitep6
