--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,8 +1,9 @@
 Revision history for Syntax::Highlight::Perl6.
 
 0.0291 Dec 18 2008
-    - Updated to latest STD.pm
-    - Updated to latest perl6.vim
+    - Updated to latest STD.pm.
+    - Updated to latest perl6.vim.
+    - Cursor.pmc has lexer caching which improve performance a bit.
 
 0.029 Dec 17 2008
     - Fix the my-variable sharing bug that caused the parser 
