--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0292 Dec 18 2008
+    - Cursor.pmc does not depend on system 'cp', it now uses File::Copy
+
 0.0291 Dec 18 2008
     - Updated to latest STD.pm.
     - Updated to latest perl6.vim.
