[Syntax::Highlight::Perl6] Updated Changes... Releasing 0.0292 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24468 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -2,6 +2,7 @@ Revision history for Syntax::Highlight::Perl6.
 
 0.0292 Dec 18 2008
     - Cursor.pmc does not depend on system 'cp', it now uses File::Copy
+    - Updated BUGS section.
 
 0.0291 Dec 18 2008
     - Updated to latest STD.pm.
