--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,10 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0293 Dec 19 2008
+    _ Renamed parse_trees to tokens and it now returns an array of hashes
+    - Added more tests to check tokens
+    _ Bundled the latest STD.pm and perl6.vim
+
 0.0292 Dec 18 2008
     - Cursor.pmc does not depend on system 'cp', it now uses File::Copy
     - Updated BUGS section.
