[Syntax::Highlight::Perl6] Fixed ->new croak bug about text => q{} [Syntax::Highlight::Perl6] Add a test to check for this bug
git-svn-id: http://svn.pugscode.org/pugs@24486 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,9 +1,13 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0294 Dec 19 2008
+    - Fixed ->new croak bug about text => q{}
+    - Added a test to check for text => q{}
+
 0.0293 Dec 19 2008
-    _ Renamed parse_trees to tokens and it now returns an array of hashes
+    - Renamed parse_trees to tokens and it now returns an array of hashes
     - Added more tests to check tokens
-    _ Bundled the latest STD.pm and perl6.vim
+    - Bundled the latest STD.pm and perl6.vim
 
 0.0292 Dec 18 2008
     - Cursor.pmc does not depend on system 'cp', it now uses File::Copy
