--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,9 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0295 Dec 19 2008
+    - Fixed _escape_html to actually work
+    - Added tests to verify that html escaping works
+
 0.0294 Dec 19 2008
     - Fixed ->new croak bug about text => q{}
     - Added a test to check for text => q{}
