[Syntax::Highlight::Perl6] $VERSION is now '0.0296' [Syntax::Highlight::Perl6] Removed all extra references to use STD [Syntax::Highlight::Perl6] Updated changes and pod bugs section [Syntax::Highlight::Perl6] Not going to release this to CPAN since make test fails
git-svn-id: http://svn.pugscode.org/pugs@24510 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,12 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0296 Dec 20 2008
+    - Fix localization of "context" vars such as $::PARSER that caused
+      use STD to be needed in your script; TimToady++.
+    - Removed all references to 'use STD;'.
+    - Removed bug from BUGS section 'Can't call method "bless" on an 
+      undefined value at STD.pm line 5269'
+
 0.0295 Dec 19 2008
     - Fixed _escape_html to actually work
     - Added tests to verify that html escaping works
