[Syntax::Highlight::Perl6] Fixed the log file creation even though debug is disabled [Syntax::Highlight::Perl6] Updated the BUGS sections
git-svn-id: http://svn.pugscode.org/pugs@24512 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -6,6 +6,9 @@ Revision history for Syntax::Highlight::Perl6.
     - Removed all references to 'use STD;'.
     - Removed bug from BUGS section 'Can't call method "bless" on an 
       undefined value at STD.pm line 5269'
+    - Cursor.pmc - Fixed the log file creation even though debug is disabled
+    - Removed bug from BUGS section 'A log file is always created when
+      using this module'.
 
 0.0295 Dec 19 2008
     - Fixed _escape_html to actually work
