--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0927
+    - Fix Cursor.pmc STD5DEBUG warning message
+
 0.0296 Dec 20 2008
     - Fix localization of "context" vars such as $::PARSER that caused
       use STD to be needed in your script; TimToady++.
