--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,8 +1,5 @@
 Revision history for Syntax::Highlight::Perl6.
 
-0.0927
-    - Fix Cursor.pmc STD5DEBUG warning message
-
 0.0296 Dec 20 2008
     - Fix localization of "context" vars such as $::PARSER that caused
       use STD to be needed in your script; TimToady++.
@@ -12,6 +9,8 @@ Revision history for Syntax::Highlight::Perl6.
     - Cursor.pmc - Fixed the log file creation even though debug is disabled
     - Removed bug from BUGS section 'A log file is always created when
       using this module'.
+    - Fix Cursor.pmc STD5DEBUG warning message
+    - Added tests for bin/hilitep6 
 
 0.0295 Dec 19 2008
     - Fixed _escape_html to actually work
