[Syntax::Highlight::Perl6] Updated changes and ignoring generated files
git-svn-id: http://svn.pugscode.org/pugs@24590 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -12,6 +12,7 @@ Revision history for Syntax::Highlight::Perl6.
       using this module'.
     - Fix Cursor.pmc STD5DEBUG warning message
     - Added tests for script/hilitep6 
+    - Updated perl6.vim
 
 0.0295 Dec 19 2008
     - Fixed _escape_html to actually work
