first customary add yourself to the AUTHORS file test commit :)
git-svn-id: http://svn.pugscode.org/pugs@24598 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -94,6 +94,7 @@ Flavio "froh-doh" Poletti        (POLETTIX)  Flavio Poletti
 Flavio S. Glock                  (FGLOCK)    Flávio S. Glock
 Florian "rafl" Ragwitz           (FLORA)
 Franck Cuny                      (FRANCKC)
+Frederik Schwarzer
 Gaal Yahas                       (GAAL)      גל יחס
 Gabor Szabo                      (SZABGAB)   Gábor Szabó גאבור סבו
 Gabriele "riffraff" Renzi
