first commit, add self to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@24640 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -157,6 +157,7 @@ Mark "ninereasons" McConnell     (MISCHKE)
 Mark Grimes                      (MGRIMES)
 Mark Stosberg                    (MARKSTOS)
 Markus "malaire" Laire
+Martin Berends                   (MBERENDS)
 Martin "tumulus" McCarthy        (MARTY)
 "mattc"
 Matt Diephouse
