[Syntax::Highlight::Perl6] reverted to a working STD.pm release [Syntax::Highlight::Perl6] Fixed the $DELIM warning bug caused by gimme5 [Syntax::Highlight::Perl6] reverted BUGS and SYNPOSIS and tests to use STD in main:: [Syntax::Highlight::Perl6] Updated Changes... Releasing to 0.0926 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24674 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,17 +1,13 @@
 Revision history for Syntax::Highlight::Perl6.
 
-0.0296 Dec ?? 2008
+0.0296 Dec 29 2008
     - Moved to Module::Install
-    - Fix localization of "context" vars such as $::PARSER that caused
-      use STD to be needed in your script; TimToady++.
-    - Removed all references to 'use STD;'.
-    - Removed bug from BUGS section 'Can't call method "bless" on an 
-      undefined value at STD.pm line 5269'
     - Cursor.pmc - Fixed the log file creation even though debug is disabled
     - Removed bug from BUGS section 'A log file is always created when
       using this module'.
     - Fix Cursor.pmc STD5DEBUG warning message
     - Added tests for script/hilitep6 
+    - Fix $DELIM warning bug caused by gimme4
     - Updated perl6.vim
 
 0.0295 Dec 19 2008
