[Syntax::Highlight::Perl6] Bumped version to 0.02961 [Syntax::Highlight::Perl6] Skipped t/02-hilitep6.t on win32 since it hanged [Syntax::Highlight::Perl6] added bar.pl and Foo.pm to MANIFEST.SKIP [Syntax::Highlight::Perl6] Updated changes and released to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24676 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.02961 Dec 29 2008
+    - Skipped running t/02-hilitep6.t on win32 since test hanged.
+
 0.0296 Dec 29 2008
     - Moved to Module::Install
     - Cursor.pmc - Fixed the log file creation even though debug is disabled
