[S::H::P6] updated to version 0.02962... Releasing to CPAN [S::H::P6] requires latest versions of Moose and YAML::Syck [S::H::P6] latest moose fixes win32 Class::MOP installation problems
git-svn-id: http://svn.pugscode.org/pugs@24717 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.02962 2009.01.01
+    - Requires Moose 0.64 to fix win32 Class::MOP installation problems
+
 0.02961 Dec 29 2008
     - Skipped running t/02-hilitep6.t on win32 since test hanged.
 
