[S:H:P6] hilitep6 was doing --clean-html all the time. Release 0.02963 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24742 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,7 +1,11 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.02963 2009.01.03
+    - hilitep6 was doing --clean-html all the time
+
 0.02962 2009.01.01
     - Requires Moose 0.64 to fix win32 Class::MOP installation problems
+    - Changed license to Perl
 
 0.02961 Dec 29 2008
     - Skipped running t/02-hilitep6.t on win32 since test hanged.
