[S:H:P6] updated to version 0.0297. Gonna release it now to CPAN. [S:H:P6] updated to latest STD.pm and perl6.vim
git-svn-id: http://svn.pugscode.org/pugs@24770 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.0297 2009.01.05
+    - Updated to latest STD.pm and perl6.vim
+
 0.02963 2009.01.03
     - hilitep6 was doing --clean-html all the time
 
