[on_sbcl] README: QuickStart section: bugfix and addition.
git-svn-id: http://svn.pugscode.org/pugs@24782 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/on_sbcl/README
+++ b/misc/elfish/on_sbcl/README
@@ -4,7 +4,11 @@ QUICKSTART
 
 $ make libraries
 $ make elfx
+$ export ELF_STD_RED_RUN=../../STD_red/STD_red_run
 $ ./elfx -xr PrimitivesSBCL.pm -v -e 'say 3'
+$ make elfcl
+$ ./elfcl -e 'say 3'
+$ make check
 
 STATUS
 
