--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,9 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.030 2009.01.08
+    - Fixes hilitep6 binmode STDIN issue for utf8
+    - Updated to latest STD.pm
+
 0.0297 2009.01.05
     - Updated to latest STD.pm and perl6.vim
 
