[S:H:P6] updated to latest STD.pm. Releasing 0.031 to CPAN
git-svn-id: http://svn.pugscode.org/pugs@24866 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.031 2009.01.11
+    - Updated to latest STD.pm
+
 0.030 2009.01.08
     - Fixes hilitep6 binmode STDIN issue for utf8
     - Updated to latest STD.pm
