Adding myself to AUTHORS to test commit bit
git-svn-id: http://svn.pugscode.org/pugs@24874 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -161,6 +161,7 @@ Martin Berends                   (MBERENDS)
 Martin "tumulus" McCarthy        (MARTY)
 "mattc"
 Matt Diephouse
+Matthew Walton                   (MATTW)
 Matthew "diakopter" Wilson       (WILSON)
 Max Maischein                    (CORION)
 Michael G Schwern                (MSCHWERN)
