--- a/examples/cookbook/README
+++ b/examples/cookbook/README
@@ -5,4 +5,5 @@ Cookbook."  This is our attempt to recreate the Perl5 Cookbook but with proper
 Perl6 idioms.  Naturally, it's an evolving process.
 
 Note the naming of the directories and the files are done in such a way as to
-mirror the Cookbook (2nd Edition) and to ease sorting.
+mirror the Cookbook (2nd Edition) and to ease sorting.  Please do not use the
+1st edition sections names.
