--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,8 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.033 2009.01.13
+    - Fixed dependency on Test::Exception (Thanks to jerome quelin)
+
 0.032 2009.01.11
     - Updated to latest STD.pm
 
