[u4x] fleshed out README a bit
git-svn-id: http://svn.pugscode.org/pugs@24902 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/u4x/README
+++ b/docs/u4x/README
@@ -7,6 +7,34 @@ perfectly worded and so brilliantly illustrative that the unsuspecting reader
 will be brought close to tears.
 
 The documentation writing itself will be done in a controlled manner, where
-"con trolled" means that people with tuits get to make sure that things are
+"controlled" means that people with tuits get to make sure that things are
 consisten t. All the documentation will be written in Pod, the Perl 6 version
 of POD.
+
+The command line tool should be written in Perl 6, because there's no reason
+not to.
+
+Here are the things that should give appropriate responses by the command line
+tool:
+
+* all core Perl 6 classes
+* all of their methods (with or without a class prefix)
+* all subs in the MAIN namespace
+* operators (short form '-' or full form 'infix:<->')
+* metaoperators (see below)
+* macros, like .WHAT and .HOW
+* special forms, like 'will', which kinda look like operators
+
+The tool will be accomodating and understand the basics of Perl 6 syntax. When
+the following things are requested
+
+  @array>>.trim
+  .=abs
+  [+]
+
+the tool will understand that the user is actually asking two separate
+questions in each case, and well answer both:
+
+  the '>>' operator (as applied to method calls), trim
+  the '.=' metaoperator, abs
+  the '[]' metaoperator, '+'
