[u4x] added keywords to the README
git-svn-id: http://svn.pugscode.org/pugs@24905 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/u4x/README
+++ b/docs/u4x/README
@@ -26,6 +26,7 @@ Here are the things that should give appropriate responses by psi:
 * metaoperators (see below)
 * macros, like .WHAT and .HOW
 * special forms, like 'will', which kinda look like operators
+* keywords in general, everything from 'given' to 'enum'
 
 psi will be accomodating and understand the basics of Perl 6 syntax. When the
 following things are requested
