[perlhints] fixed small typo
git-svn-id: http://svn.pugscode.org/pugs@24909 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/perlhints/README
+++ b/misc/perlhints/README
@@ -1,5 +1,5 @@
 This project has the goal to create a database and a tool that let users 
-query the meaning of a syntactict Perl 6 construct.
+query the meaning of a syntactic Perl 6 construct.
 
 For a more detailed discussion of the project goals, please read
 http://www.nntp.perl.org/group/perl.perl6.users/2007/07/msg621.html and the
