[elfparse] Set make target known_working_STD (to r24775), as elfparse isn't quite working with the current STD.pm.
git-svn-id: http://svn.pugscode.org/pugs@24931 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/elfparse/README
+++ b/misc/elfish/elfparse/README
@@ -2,9 +2,11 @@ elfparse - getting STD.pm running on elf.
 
 QUICKSTART
 
-$ make all
+$ make known_working_STD
 $ make check
+$ make all
 $ ./elfblue -v -s -e 'say 3'
+$ make is_perl_recent_enough
 $ ./elfgreenstd -v -e 'say /<STD::number>/.match("23").match_describe'
 $ make does_gimme5_memory_problem_still_exist
 
