[S:H:P6] Updated to jquery 1.3, latest STD.pm and perl6.vim [S:H:P6] Bumped version to 0.034 for CPAN
git-svn-id: http://svn.pugscode.org/pugs@24936 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/Syntax-Highlight-Perl6/Changes
+++ b/misc/Syntax-Highlight-Perl6/Changes
@@ -1,5 +1,9 @@
 Revision history for Syntax::Highlight::Perl6.
 
+0.034 2009.01.17
+    - Updated to jquery 1.3
+    - Updated to latest STD.pm and perl6.vim
+
 0.033 2009.01.13
     - Fixed dependency on Test::Exception (Thanks to jerome quelin)
 
