[elfparse] Fleshed out category implementation. Longest tokens are kludged, as that was sufficient for STD_red.
git-svn-id: http://svn.pugscode.org/pugs@24966 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/elfparse/README
+++ b/misc/elfish/elfparse/README
@@ -8,6 +8,8 @@ $ make all
 $ ./elfblue -v -s -e 'say 3'
 $ make is_perl_recent_enough
 $ ./elfgreenstd -v -e 'say /<STD::number>/.match("23").match_describe'
+$ ./elfgreen -v -e 'proto token foo {a}; token foo:<+> { \+ }; token foo:<++> { \+\+ }; say /<foo>/.match("a++b").match_describe'
+
 $ make does_gimme5_memory_problem_still_exist
 
 INTRODUCTION
